tdf#117935 Accessible text-attributes-changed signals...

... should only be emitted when the text attributes have changed [a11y]
second attempt.

This appears to have begin at

    commit 7d9bb549d498d6beed2c4050c402d09643febdfa
    Date:   Mon Jun 2 15:00:50 2014 +0000
    Related: #i124638# Second step of DrawingLayer FillAttributes...

Which accidentally removed the aWhichSublist param from the SwUpdateAttr
constructor in SwpHints::TryInsertHint.

Change-Id: If435ea71e8d84e0d8497cd7106cfdbebcc6af7a0